--- a/src/pages/Alert/index.module.less
+++ b/src/pages/Alert/index.module.less
@@ -1,4 +1,4 @@
-.alert-page {
+.alertPage {
   padding: 0 32px;
   height: 100%;
 
@@ -87,7 +87,7 @@
       }
 
       .item-box {
-        width: 300px;
+        width: 280px;
         height: 200px;
         border-radius: 10px;
         cursor: pointer;
