--- a/src/pages/Auth/components/layouts/index.module.less
+++ b/src/pages/Auth/components/layouts/index.module.less
@@ -63,6 +63,10 @@
         flex: 1;
         padding: 0 8px;
         overflow: hidden;
+
+        .ant-table {
+          height: 100% !important;
+        }
       }
     }
   }
