--- a/src/global.less
+++ b/src/global.less
@@ -110,3 +110,22 @@
     color: #e9e9e9;
     margin: 0 5px;
 }
+
+.dropdown-box {
+    width: 100%;
+
+    .contextMenu-icon {
+        font-size: 14px;
+        opacity: .4;
+        font-weight: bold;
+        margin-right: 8px;
+    }
+
+    .contextMenu-text {
+        font-size: 14px;
+        opacity: .6;
+        margin-left: 64px;
+        flex: 1;
+        text-align: right;
+    }
+}
