--- a/src/pages/Auth/components/layouts/index.module.less
+++ b/src/pages/Auth/components/layouts/index.module.less
@@ -1,5 +1,5 @@
 .authPage {
-  padding: 0 32px;
+  padding: 32px 32px 8px;
   height: 100%;
 
   @media (prefers-color-scheme: dark) {
@@ -35,7 +35,7 @@
   :global {
     .auth-body {
       width: 100%;
-      height: calc(100% - 112px);
+      height: calc(100% - 106px);
       align-items: flex-start;
 
       .auth-left-tree {
