--- a/src/global.less
+++ b/src/global.less
@@ -111,6 +111,11 @@
     margin: 0 5px;
 }
 
+.greyColorStyle {
+    color: rgba(144, 144, 144, 0.4);
+    cursor: not-allowed;
+}
+
 .dropdown-box {
     width: 100%;
 
