--- a/src/pages/Alert/index.module.less
+++ b/src/pages/Alert/index.module.less
@@ -106,7 +106,8 @@
           .item-icon {
             width: 100%;
             flex: 1;
-            border-radius: 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
             opacity: .8;
             font-size: 48px;
           }
@@ -150,7 +151,9 @@
       .add-box {
         font-size: 100px;
       }
-
+      .ant-switch{
+        width: 200px !important;
+      }
     }
   }
 }
