--- a/src/index.less
+++ b/src/index.less
@@ -153,6 +153,16 @@ code {
   height: 100%;
   width: 100%;
 
+  div {
+    .ant-spin {
+      max-height: 100%;
+
+      .ant-spin-text {
+        margin-top: 32px;
+      }
+    }
+  }
+
   .ant-spin-container {
     height: 100%;
     width: 100%;
@@ -165,8 +175,45 @@ code {
 
 .ant-modal {
   user-select: none;
+
+  .ant-modal-header {
+    margin-bottom: 24px;
+  }
 }
 
 .ant-input-disabled {
   background-color: inherit !important;
+}
+
+.ant-switch {
+  margin-left: 4px !important;
+  border-radius: 0 !important;
+  width: calc(100% - 6px) !important;
+  height: 24px !important;
+  background-color: transparent !important;
+  border: 3px solid rgba(144, 144, 144, .6) !important;
+  padding: 12px !important;
+
+  .ant-switch-handle {
+    height: calc(100% - 10px) !important;
+    width: 48% !important;
+    top: 4px !important;
+    bottom: 4px !important;
+    left: 4px !important;
+  }
+
+  .ant-switch-handle::before {
+    border-radius: 0 !important;
+    background-color: rgba(120, 120, 120, 0.8) !important;
+  }
+}
+
+.ant-switch-checked {
+  .ant-switch-handle {
+    left: 50% !important;
+  }
+
+  .ant-switch-handle::before {
+    background-color: #177ddc !important;
+  }
 }
