--- a/src/pages/Software/index.module.less
+++ b/src/pages/Software/index.module.less
@@ -103,10 +103,12 @@
           // border: 1px solid rgba(100, 100, 100, 0.2);
           border-radius: inherit;
           box-shadow: 3px 3px 10px 3px rgba(118, 118, 118, 0.3);
+          position: relative;
 
           &-left {
             width: calc(100% - 40px);
             padding: 12px 0;
+            z-index: 10;
 
             .item-icon {
               width: 40px;
@@ -146,10 +148,13 @@
           }
 
           .item-badge {
+            position: absolute;
+            right: 12px;
+            top: 12px;
             text-align: right;
             font-size: 18px;
-            width: 40px;
-            height: 100%;
+            width: 30px;
+            height: 30px;
             z-index: 10;
           }
         }
