--- a/src/pages/Projects/index.module.less
+++ b/src/pages/Projects/index.module.less
@@ -1,5 +1,5 @@
 .projectPage {
-  padding: 0 32px;
+  padding: 32px 32px 8px;
   height: 100%;
 
   @media (prefers-color-scheme: dark) {
@@ -42,7 +42,7 @@
   :global {
     .home-page-body {
       margin: -12px -12px 0;
-      height: calc(100% - 100px);
+      height: calc(100% - 70px);
       // flex-wrap: wrap;
       display: block;
       overflow-y: auto;
