--- a/src/pages/Projects/index.module.less
+++ b/src/pages/Projects/index.module.less
@@ -121,6 +121,23 @@
           }
         }
       }
+
+      .project-history-modal {
+        .plugin-manager-modal-body {
+          height: calc(100vh - 144px);
+          max-height: calc(100vh - 144px);
+
+          .ant-table {
+            height: 100% !important;
+
+            .ant-table-container {
+              .ant-table-body{
+                height: calc(100% - 55px) !important;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
