--- a/src/pages/Flow/components/FooterToolbar/index.module.less
+++ b/src/pages/Flow/components/FooterToolbar/index.module.less
@@ -4,5 +4,40 @@
   padding: 0 16px;
   border-top: 1px solid rgba(144, 144, 144, 0.5);
 
-  :global {}
+  :global {
+    .terminal-header {
+      justify-content: flex-end;
+      -webkit-justify-content: flex-end;
+      padding: 4px 8px;
+      height: 22px;
+
+      .header-icon {
+        cursor: pointer;
+        font-size: 14px;
+      }
+    }
+
+    .footer-toolbar-item {
+      padding: 4px 12px;
+      cursor: pointer;
+
+      .item-icon {
+        font-size: 12px;
+        height: 12px;
+        width: 12px;
+      }
+
+      .item-title {
+        font-size: 12px;
+        margin-left: 4px;
+      }
+    }
+
+    .right-project-dir {
+      width: 200px;
+      padding-right: 8px;
+      color: rgba(24, 144, 255, 1);
+      text-decoration: underline;
+    }
+  }
 }
