--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -1,6 +1,6 @@
 .configPanel {
   height: 100%;
-  width: 300px;
+  width: 100%;
   overflow: hidden;
   border-left: 1px solid rgba(144, 144, 144, 0.5);
 
