--- a/src/pages/Flow/index.module.less
+++ b/src/pages/Flow/index.module.less
@@ -6,7 +6,7 @@
   :global {
     .flow-page-body {
       width: 100%;
-      flex: 1;
+      height: calc(100% - 80px);
 
       &-canvas {
         height: 100%;
