--- a/src/global.less
+++ b/src/global.less
@@ -11,6 +11,7 @@
 
     .primaryBackgroundColor {
         background-color: #e6f4ff;
+        color: rgb(114, 114, 114);
     }
 }
 
@@ -152,4 +153,39 @@
 .nameStyle {
     color: @primaryColor;
     cursor: pointer;
+}
+
+.error,
+.NG {
+    background-color: #931212 !important;
+    color: #fff !important;
+}
+
+.success,
+.OK {
+    background-color: #88db57 !important;
+}
+
+.warning,
+.warnning {
+    background-color: #b8831b !important;
+    color: #fff !important;
+}
+
+.greyBackground {
+    background-color: grey !important;
+}
+
+.success-font,
+.OK-font {
+    color: #88db57 !important;
+}
+
+.error-font,
+.NG-font {
+    color: #931212 !important;
+}
+
+.warning-font {
+    color: #b8831b !important;
 }
