--- a/src/pages/Flow/components/PluginPanel/index.module.less
+++ b/src/pages/Flow/components/PluginPanel/index.module.less
@@ -89,6 +89,9 @@
 
                   .img {
                     height: 20px;
+                    -webkit-user-drag: none;
+                    -moz-user-drag: none;
+                    -ms-user-drag: none;
                   }
                 }
 
