react-flow-添加节点位置

--- a/src/pages/Flow/components/CanvasFlow/index.module.less
+++ b/src/pages/Flow/components/CanvasFlow/index.module.less
@@ -6,7 +6,6 @@
 
     .overview * {
       box-sizing: border-box;
-      color: rgba(144, 144, 144, .7);
     }
 
     .overview {
@@ -238,18 +237,20 @@
       }
 
       .custom-node {
+        height: 100%;
         min-width: 140px;
-        min-height: 80px;
+        min-height: 40px;
         padding: 0 8px 8px;
         border: 3px solid #30a2a3;
         border-radius: 3px;
         box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.2);
         font-size: 12px;
+        overflow: hidden;
 
         .node-top {
           width: 100%;
           justify-content: space-between;
-    
+
           .node-top-icon {
             width: 16px;
             height: 16px;
@@ -260,41 +261,41 @@
             cursor: pointer;
           }
         }
-    
+
         .node-content {
           flex: 1;
           flex-direction: column;
           overflow: hidden;
-    
+
           .center {
             width: 100%;
-    
+
             .center-icon {
               font-size: 16px;
               color: gray;
             }
           }
-    
+
           .json-content {
             width: 100%;
             margin-bottom: 8px;
             // border: 1px solid rgba(241, 242, 243, 0.5);
             padding: 4px 8px;
           }
-    
+
           .img-box {
             flex-wrap: wrap;
             width: 100%;
             height: 100%;
-    
+
             .ant-image {
               width: 100%;
-    
+
               .view-box {
                 width: 100%;
                 margin-bottom: 8px;
                 background: #2e394d;
-    
+
                 img {
                   width: 100%;
                   cursor: crosshair;
@@ -303,7 +304,7 @@
             }
           }
         }
-    
+
         .node-footer {
           justify-content: space-between;
           padding-top: 8px;
