节点配置页

--- a/src/index.less
+++ b/src/index.less
@@ -64,7 +64,7 @@ button:focus-visible {
 code {
   background-color: #1a1a1a;
   padding: 2px 4px;
-  margin: 0 4px;
+  // margin: 0 4px;
   border-radius: 4px;
 }
 
@@ -110,7 +110,7 @@ code {
   }
 
   code {
-    background-color: #f9f9f9;
+    background-color: #fff;
   }
 }
 
@@ -205,6 +205,10 @@ code {
 
 .ant-input-disabled {
   background-color: inherit !important;
+}
+
+.ant-input-number {
+  width: 100%;
 }
 
 .ant-switch {
