--- a/src/pages/Flow/components/FooterToolbar/index.module.less
+++ b/src/pages/Flow/components/FooterToolbar/index.module.less
@@ -2,7 +2,7 @@
   height: 30px;
   width: 100%;
   padding: 0 8px;
-  border-top: 1px solid rgba(144, 144, 144, 0.5);
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
 
   :global {
     .terminal-header {
