--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -2,7 +2,81 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  border-left: 1px solid rgba(144, 144, 144, 0.5);
 
-  :global {}
+  :global {
+    .config-panel-left {
+      width: 100%;
+      height: 100%;
+
+      &-title {
+        height: 40px;
+        line-height: 40px;
+        font-size: 18px;
+        font-weight: bolder;
+        padding: 0 8px;
+      }
+
+      &-body {
+        height: calc(100% - 80px);
+        width: 100%;
+
+        .ant-form {
+          height: 100%;
+          width: 100%;
+
+          .ant-tabs {
+            width: 100%;
+
+            &-nav {
+              height: 38px;
+              width: 100%;
+              margin-bottom: 0;
+
+              .ant-tabs-tab {
+                padding: 8px;
+              }
+
+              .ant-tabs-tab+.ant-tabs-tab {
+                margin-left: 16px;
+              }
+            }
+
+            &-content-holder {
+              display: none;
+            }
+          }
+
+          .config-panel-left-body-panel {
+            height: calc(100% - 54px);
+            width: 100%;
+            padding: 16px 8px;
+            overflow-y: auto;
+
+            .config-panel-left-body-info-box {
+              background-color: rgba(144, 144, 144, 0.2);
+              padding: 1px 8px;
+              margin-bottom: 16px;
+
+              p {
+                line-height: 1;
+                margin: 8px 0;
+                user-select: text;
+
+                span {
+                  opacity: 0.6;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &-footer {
+        height: 40px;
+        width: 100%;
+        gap: 8px;
+        box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
 }
