--- a/src/pages/Flow/components/MinimapPanel/index.module.less
+++ b/src/pages/Flow/components/MinimapPanel/index.module.less
@@ -8,7 +8,6 @@
       margin-top: 4px;
       display: inline-block;
       padding: 16px;
-      background: #000;
       transition: all 0.5s;
       overflow: hidden;
 
@@ -18,14 +17,11 @@
         overflow: hidden;
         border: 2px solid #30a2a3;
 
-        .x6-widget-minimap {
-          background: #000;
-        }
+        .x6-widget-minimap {}
       }
     }
 
     .map-toolbar {
-      background: #000;
       padding: 8px 8px;
       font-size: 18px;
       justify-content: space-between;
@@ -33,7 +29,6 @@
       z-index: 9;
 
       .toolbar-btn {
-        color: #fff;
         margin: 0 8px;
         cursor: pointer;
       }
@@ -47,6 +42,51 @@
         cursor: text;
         user-select: none;
         z-index: 10;
+      }
+    }
+
+    @media (prefers-color-scheme: light) {
+      .mini-map-top {
+        background: #fff;
+
+        #mini-map {
+          .x6-widget-minimap {
+            background: #fff;
+          }
+        }
+      }
+
+      .map-toolbar {
+        background: #fff;
+
+        .toolbar-btn {}
+
+        .zoom-font {
+          background: rgba(196, 196, 196, 0.2);
+        }
+      }
+    }
+
+
+    @media (prefers-color-scheme: dark) {
+      .mini-map-top {
+        background: rgb(38, 38, 38);
+
+        #mini-map {
+          .x6-widget-minimap {
+            background: rgb(38, 38, 38);
+          }
+        }
+      }
+
+      .map-toolbar {
+        background: rgb(38, 38, 38);
+
+        .toolbar-btn {}
+
+        .zoom-font {
+          background: rgba(196, 196, 196, 0.2);
+        }
       }
     }
   }
