--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -11,7 +11,7 @@
       &-title {
         height: 40px;
         line-height: 40px;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: bolder;
         padding: 0 8px;
       }
@@ -47,9 +47,9 @@
           }
 
           .config-panel-left-body-panel {
-            height: calc(100% - 54px);
+            height: calc(100% - 40px);
             width: 100%;
-            padding: 16px 8px;
+            padding: 16px 8px 0;
             overflow-y: auto;
 
             .config-panel-left-body-info-box {
@@ -67,6 +67,32 @@
                 }
               }
             }
+
+            .port-item {
+              line-height: 1;
+              margin-bottom: 8px;
+              padding: 8px;
+              background-color: rgba(144, 144, 144, 0.2);
+
+              .ant-form-item {
+                margin-bottom: 0;
+                width: 100%;
+              }
+
+              &-title {
+                line-height: 1;
+                // margin-bottom: 8px;
+                font-weight: bolder;
+                font-size: 14px;
+              }
+
+              &-body {
+                &-switch {
+                  width: 100% !important;
+                  margin-left: 0 !important;
+                }
+              }
+            }
           }
         }
       }
@@ -74,8 +100,70 @@
       &-footer {
         height: 40px;
         width: 100%;
+        padding: 0 8px;
         gap: 8px;
-        box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    .config-panel-right {
+      width: 100%;
+      height: 100%;
+
+      &-title {
+        height: 40px;
+        line-height: 40px;
+        font-size: 16px;
+        font-weight: bolder;
+        padding: 0 8px;
+      }
+
+      &-body {
+        height: calc(100% - 40px);
+        width: 100%;
+      }
+
+      &-footer-toolbar {
+        border-bottom: 1px solid rgba(144, 144, 144, 0.2);
+
+        &-item {
+          padding: 8px 12px;
+          cursor: pointer;
+
+          .item-icon {
+            font-size: 12px;
+            height: 12px;
+            width: 12px;
+          }
+
+          .item-title {
+            line-height: 1;
+            font-size: 12px;
+            margin-left: 4px;
+          }
+        }
+
+        &-item:hover {
+          background-color: #e6f4ff;
+          color: rgb(114, 114, 114);
+        }
+      }
+    }
+
+    @media (prefers-color-scheme: light) {
+      .config-panel-left {
+        &-footer {
+          // box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+          border-top: 2px solid rgba(144, 144, 144, 0.1);
+        }
+      }
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .config-panel-left {
+        &-footer {
+          // box-shadow: 0 -1px 4px 1px rgba(255, 255, 255, 0.2);
+          border-top: 2px solid rgba(144, 144, 144, 0.2);
+        }
       }
     }
   }
