--- a/src/pages/Flow/components/FooterToolbar/index.module.less
+++ b/src/pages/Flow/components/FooterToolbar/index.module.less
@@ -2,7 +2,16 @@
   height: 30px;
   width: 100%;
   padding: 0 8px;
-  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+
+  @media (prefers-color-scheme: light) {
+    // box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+    border-top: 2px solid rgba(144, 144, 144, 0.1);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    // box-shadow: 0 -1px 4px 1px rgba(255, 255, 255, 0.2);
+    border-top: 2px solid rgba(144, 144, 144, 0.2);
+  }
 
   :global {
     .terminal-header {
