快捷键功能

--- a/src/layouts/BasicLayout/components/header/index.module.less
+++ b/src/layouts/BasicLayout/components/header/index.module.less
@@ -56,5 +56,11 @@
         font-size: 16px;
       }
     }
+
+    @media (prefers-color-scheme: dark) {
+      .basic-layout-header-title-box {
+        color: #eee;
+      }
+    }
   }
 }
