画布功能栏

--- a/src/global.less
+++ b/src/global.less
@@ -31,6 +31,7 @@
     .primaryBackgroundColor {
         background-color: @primaryColor;
     }
+
     .boxShadow {
         box-shadow: 0 1px 4px 1px rgba(255, 255, 255, 0.2);
     }
@@ -191,6 +192,11 @@
     color: #fff !important;
 }
 
+.info {
+    background-color: @primaryColor  !important;
+    color: #fff !important;
+}
+
 .greyBackground {
     background-color: grey !important;
 }
@@ -207,4 +213,8 @@
 
 .warning-font {
     color: #b8831b !important;
+}
+
+.info-font {
+    color: @primaryColor  !important;
 }
