--- a/src/pages/Flow/components/CanvasFlow/index.module.less
+++ b/src/pages/Flow/components/CanvasFlow/index.module.less
@@ -4,6 +4,11 @@
   position: relative;
 
   :global {
+    .canvas-search-box {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+    }
 
     .overview * {
       box-sizing: border-box;
