--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -88,8 +88,9 @@
 
               &-body {
                 &-switch {
-                  width: 100% !important;
-                  margin-left: 0 !important;
+                  width: calc(100% - 0.5px) !important;
+                  max-width: 100%;
+                  margin-left: 0.5px !important;
                 }
               }
             }
