--- a/src/index.less
+++ b/src/index.less
@@ -215,6 +215,7 @@ code {
   margin-left: 4px !important;
   border-radius: 0 !important;
   width: calc(100% - 6px) !important;
+  max-width: 200px;
   height: 24px !important;
   background-color: transparent !important;
   border: 3px solid rgba(144, 144, 144, .6) !important;
