--- a/src/global.less
+++ b/src/global.less
@@ -218,3 +218,10 @@
 .info-font {
     color: @primaryColor  !important;
 }
+
+.modal-table-btn {
+    .ant-modal-body {
+        height: calc(100vh - 180px) !important;
+        max-height: calc(100vh - 180px) !important;
+    }
+}
