--- a/src/pages/Flow/components/PluginPanel/index.module.less
+++ b/src/pages/Flow/components/PluginPanel/index.module.less
@@ -34,8 +34,10 @@
       overflow-y: auto;
 
       &-type {
-        padding: 4px 8px;
-        gap: 16px;
+        height: 40px;
+        line-height: 40px;
+        padding: 0 8px;
+        gap: 8px;
         white-space: nowrap;
 
         &-item {
