--- a/src/index.less
+++ b/src/index.less
@@ -178,9 +178,8 @@ code {
   user-select: none;
 }
 
-.ant-modal {
-  user-select: none;
-  max-height: calc(100vh - 48px);
+.ant-modal-centered {
+  max-height: 100vh;
 
   .ant-modal-content {
     height: 100%;
@@ -193,14 +192,20 @@ code {
     }
 
     .ant-modal-body {
+      height: calc(100vh - 144px);
       max-height: calc(100vh - 144px);
+
+      .ant-table {
+        height: 100% !important;
+
+        .ant-table-container {
+          .ant-table-body {
+            height: calc(100% - 55px) !important;
+          }
+        }
+      }
     }
   }
-}
-
-.ant-modal>div:first-child {
-  height: 100%;
-  max-height: calc(100vh - 48px);
 }
 
 .ant-input-disabled {
@@ -215,7 +220,7 @@ code {
   margin-left: 4px !important;
   border-radius: 0 !important;
   width: calc(100% - 6px) !important;
-  max-width: 200px;
+  max-width: 152px;
   height: 24px !important;
   background-color: transparent !important;
   border: 3px solid rgba(144, 144, 144, .6) !important;
