--- a/src/index.less
+++ b/src/index.less
@@ -253,3 +253,7 @@ code {
 .ant-btn:disabled {
   background-color: #a8a8a8;
 }
+
+.ant-splitter>.ant-splitter-bar .ant-splitter-bar-dragger {
+  z-index: 0;
+}
