--- a/src/pages/Flow/index.module.less
+++ b/src/pages/Flow/index.module.less
@@ -2,11 +2,12 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  position: relative;
 
   :global {
     .flow-page-body {
       width: 100%;
-      height: calc(100% - 60px);
+      height: calc(100% - 62px);
 
       &-canvas {
         height: 100%;
