--- a/src/pages/Flow/components/FooterToolbar/index.module.less
+++ b/src/pages/Flow/components/FooterToolbar/index.module.less
@@ -1,53 +1,78 @@
 .footerToolbar {
-  height: 30px;
-  min-height: 30px;
   width: 100%;
-  padding: 0 8px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   @media (prefers-color-scheme: light) {
     // box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
     border-top: 2px solid rgba(144, 144, 144, 0.1);
+
+    :global {
+      .footer-toolbar-box {
+        background-color: #eee;
+      }
+    }
   }
 
   @media (prefers-color-scheme: dark) {
     // box-shadow: 0 -1px 4px 1px rgba(255, 255, 255, 0.2);
     border-top: 2px solid rgba(144, 144, 144, 0.2);
+
+    :global {
+      .footer-toolbar-box {
+        background-color: #111;
+      }
+    }
   }
 
   :global {
-    .terminal-header {
-      justify-content: flex-end;
-      -webkit-justify-content: flex-end;
-      padding: 4px 8px;
-      height: 22px;
+    .footer-toolbar-box {
+      height: 200px;
+      width: 100%;
+    }
 
-      .header-icon {
+    .footer-toolbar-tab-box {
+      height: 30px;
+      min-height: 30px;
+      width: 100%;
+      padding: 0 8px;
+
+      .terminal-header {
+        justify-content: flex-end;
+        -webkit-justify-content: flex-end;
+        padding: 4px 8px;
+        height: 22px;
+
+        .header-icon {
+          cursor: pointer;
+          font-size: 14px;
+        }
+      }
+
+      .footer-toolbar-item {
+        padding: 4px 12px;
         cursor: pointer;
-        font-size: 14px;
+
+        .item-icon {
+          font-size: 12px;
+          height: 12px;
+          width: 12px;
+        }
+
+        .item-title {
+          font-size: 12px;
+          margin-left: 4px;
+        }
       }
-    }
 
-    .footer-toolbar-item {
-      padding: 4px 12px;
-      cursor: pointer;
-
-      .item-icon {
-        font-size: 12px;
-        height: 12px;
-        width: 12px;
+      .right-project-dir {
+        width: 300px;
+        padding-right: 8px;
+        color: rgba(24, 144, 255, 1);
+        text-decoration: underline;
       }
-
-      .item-title {
-        font-size: 12px;
-        margin-left: 4px;
-      }
-    }
-
-    .right-project-dir {
-      width: 300px;
-      padding-right: 8px;
-      color: rgba(24, 144, 255, 1);
-      text-decoration: underline;
     }
   }
 }
