流程图连线切换

--- a/src/global.less
+++ b/src/global.less
@@ -141,6 +141,16 @@
     }
 }
 
+.ant-table {
+    height: 100% !important;
+
+    .ant-table-container {
+        .ant-table-body {
+            height: calc(100% - 55px) !important;
+        }
+    }
+}
+
 .operation-style {
     color: @primaryColor;
     cursor: pointer;
