--- a/src/index.less
+++ b/src/index.less
@@ -257,3 +257,9 @@ code {
 .ant-splitter>.ant-splitter-bar .ant-splitter-bar-dragger {
   z-index: 0;
 }
+
+.ant-form {
+  .ant-form-item-label {
+    white-space: nowrap !important;
+  }
+}
