--- a/src/pages/Alert/index.module.less
+++ b/src/pages/Alert/index.module.less
@@ -49,6 +49,7 @@
     .alert-page-body {
       height: calc(100% - 70px);
       margin: -12px;
+      overflow-y: auto;
 
       .box-animation {
 
@@ -151,7 +152,8 @@
       .add-box {
         font-size: 100px;
       }
-      .ant-switch{
+
+      .ant-switch {
         width: 200px !important;
       }
     }
