--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -106,6 +106,7 @@
               &-name {
                 font-size: 16px;
                 font-weight: 500;
+                gap: 4px;
               }
 
               &-time {
