--- a/src/pages/Projects/index.module.less
+++ b/src/pages/Projects/index.module.less
@@ -5,6 +5,8 @@
   @media (prefers-color-scheme: dark) {
     :global {
       .home-page-body {
+        overflow-y: auto;
+
         .item-box {
           .item-right {
 
