--- a/src/pages/Software/index.module.less
+++ b/src/pages/Software/index.module.less
@@ -5,6 +5,9 @@
   @media (prefers-color-scheme: dark) {
     :global {
       .alert-page-body {
+        height: calc(100% - 70px);
+        overflow-y: auto;
+
         .item-box {
 
           .item-box-child {
@@ -49,6 +52,7 @@
     .alert-page-body {
       height: calc(100% - 70px);
       margin: -12px;
+      overflow-y: auto;
 
       .box-animation {
 
