--- a/src/pages/Flow/components/ConfigPanel/index.module.less
+++ b/src/pages/Flow/components/ConfigPanel/index.module.less
@@ -14,6 +14,7 @@
         font-size: 16px;
         font-weight: bolder;
         padding: 0 8px;
+        white-space: nowrap;
       }
 
       &-body {
@@ -103,50 +104,6 @@
         width: 100%;
         padding: 0 8px;
         gap: 8px;
-      }
-    }
-
-    .config-panel-right {
-      width: 100%;
-      height: 100%;
-
-      &-title {
-        height: 40px;
-        line-height: 40px;
-        font-size: 16px;
-        font-weight: bolder;
-        padding: 0 8px;
-      }
-
-      &-body {
-        height: calc(100% - 40px);
-        width: 100%;
-      }
-
-      &-footer-toolbar {
-        border-bottom: 1px solid rgba(144, 144, 144, 0.2);
-
-        &-item {
-          padding: 8px 12px;
-          cursor: pointer;
-
-          .item-icon {
-            font-size: 12px;
-            height: 12px;
-            width: 12px;
-          }
-
-          .item-title {
-            line-height: 1;
-            font-size: 12px;
-            margin-left: 4px;
-          }
-        }
-
-        &-item:hover {
-          background-color: #e6f4ff;
-          color: rgb(114, 114, 114);
-        }
       }
     }
 
