--- a/src/layouts/BasicLayout/components/siderNav/index.module.less
+++ b/src/layouts/BasicLayout/components/siderNav/index.module.less
@@ -2,6 +2,7 @@
   width: 68px !important;
   min-width: 68px !important;
   max-width: 68px !important;
+  height: 100%;
   overflow: hidden;
   background-color: rgb(233, 233, 233);
 
@@ -58,14 +59,12 @@
         justify-content: center;
 
         .sider-bottom-title {
-          font-family: 'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC', sans-serif;
           font-weight: 700;
           font-size: 32px;
           line-height: 27px;
         }
 
         .sider-bottom-label {
-          font-family: 'PingFangSC-Regular', 'PingFang SC', sans-serif;
           font-weight: 400;
           font-size: 20px;
           line-height: 20px;
