--- a/src/pages/Plugin/index.module.less
+++ b/src/pages/Plugin/index.module.less
@@ -3,5 +3,10 @@
   height: 100%;
   width: 100%;
 
-  :global {}
+  :global {
+    .plugin-page-body {
+      height: calc(100% - 82px);
+      width: 100%;
+    }
+  }
 }
