--- a/src/components/Measurement/index.module.less
+++ b/src/components/Measurement/index.module.less
@@ -1,4 +1,4 @@
-.roiMark {
+.measurement {
   gap: 4px;
   flex: 1;
   flex-wrap: wrap;
@@ -54,7 +54,7 @@
         }
 
         .focus {
-          background-color: #fff;
+          // background-color: #fff;
         }
       }
 
@@ -64,7 +64,7 @@
         }
 
         .focus {
-          background-color: #202735;
+          // background-color: #202735;
         }
 
         .bgColor {
